# name-that-feeling

./: .gitignore  README.md  pyproject.toml
experiments/00-direct-elicitation/: config.yaml  description.md  run.py
experiments/00-direct-elicitation/notebooks/: elicitation_yield.py
experiments/00-scenario-generation/: candidates.py  config.yaml  description.md  instructions.md  messages.py  prompt-1.md  summarize.py
experiments/01-emotion-vectors/: clusters.json  clusters_50.json  config.yaml  description.md  emotions.txt  run.py
experiments/01-emotion-vectors/data/: afraid.jsonl  amazed.jsonl  amused.jsonl  angry.jsonl  annoyed.jsonl  anxious.jsonl  ashamed.jsonl  blissful.jsonl  bored.jsonl  calm.jsonl  compassionate.jsonl  contemptuous.jsonl  content.jsonl  desperate.jsonl  disgusted.jsonl  elated.jsonl  embarrassed.jsonl  energized.jsonl  excited.jsonl  frustrated.jsonl  furious.jsonl  grateful.jsonl  guilty.jsonl  happy.jsonl  heartbroken.jsonl  hopeful.jsonl  hostile.jsonl  indifferent.jsonl  jealous.jsonl  joyful.jsonl  listless.jsonl  lonely.jsonl  loving.jsonl  melancholy.jsonl  neutral.jsonl  optimistic.jsonl  overwhelmed.jsonl  panicked.jsonl  perplexed.jsonl  proud.jsonl  (+13 more)
experiments/01-emotion-vectors/notebooks/: vector_similarity.py
experiments/01-pilot/: train.py
experiments/02-elicited-activations/: config.yaml  description.md  explore_activations.py  explore_tags.py  run.py
experiments/02-elicited-activations/notebooks/: explore_activations.py  explore_tags.py
experiments/02-message-activations/: config.yaml  description.md  explore_activations.py  run.py
experiments/02-message-activations/notebooks/: explore_activations.py
experiments/02-prompted-base-tag-baseline/: common.py  description.md  rescore_teacher_centroid.py  run.py  sample_stability.py
experiments/03-training-pilot/: build_dataset.py  config.yaml  description.md  evaluate.py  evaluate_multi_turn.py  generate_neutral.py  generate_unconditioned.py  judge_eval.py  judge_response_shift.py  response_shift.py  results.py  sample_neutral.py  sample_train_replies.py  smoke_compare.py  train.py
experiments/04-corrupted-labels/: build_dataset.py  common.py  description.md  evaluate.py  export_adapter.py  readout.py  sample_train_replies.py  summarize_runs.py  train.py
experiments/04-emotional-jailbreak/: config.yaml  description.md  run.py  tasks.py
experiments/04-multi-turn-emotion-dynamics/: description.md
experiments/04-sft-seeds-and-epochs/: common.py  description.md  evaluate.py  export_adapter.py  readout.py  sample_stability.py  sample_train_replies.py  summarize_runs.py  train.py
experiments/04-trained-emotion-vectors/: config.yaml  description.md  export_adapter.py  fix_adapter.py  inspect_adapter.py  run.py
experiments/05-emotional-jailbreak/: build_behaviors.py  prompts.py
experiments/05-sft-seeds-and-epochs/: common.py  description.md  evaluate.py  export_adapter.py  readout.py  sample_train_replies.py  summarize_runs.py  train.py
experiments/05-tag-dpo/: build_pairs.py  common.py  description.md  evaluate_sampling.py  export_adapter.py  sample_pool.py  train.py
src/name_that_feeling/: __init__.py  _registry.py  hf_router.py  infra.py  reporting.py
(+62 files in other folders)
