[project]
name = "name-that-feeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.21.0",
    "marimo>=0.23.10",
    "modal>=1.5.1",
    "numpy>=2.5.0",
    "polars>=1.42.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
    "safetensors>=0.8.0",
    "tinker>=0.22.7",
    "vl-convert-python>=1.9.0.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/name_that_feeling"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
