[project]
name = "name-that-feeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.21.0",
    "inspect-ai>=0.3.145",
    "marimo>=0.23.10",
    "modal>=1.5.1",
    "numpy>=2.5.0",
    "openai>=2.45.0",
    "polars>=1.42.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
    "safetensors>=0.8.0",
    "tinker>=0.22.7",
    "torch>=2.9.0",
    "vl-convert-python>=1.9.0.post1",
]

# torch is the one exception to "heavy ML deps live in the Modal image": Tinker's
# `TrainingClient.forward_backward_custom` runs the loss client-side and raises
# ImportError without it. That loss only touches small logprob tensors the server
# returns, so the CPU wheel is enough -- no CUDA runtime in the venv.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Registers this package's custom inspect-ai providers (the `tinker` model provider).
# inspect discovers it via importlib entry points; the module is import-light.
[project.entry-points.inspect_ai]
name_that_feeling = "name_that_feeling._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/name_that_feeling"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
